parses the title of a resource and adds a summary function for the dataset

--- a/tests/testthat/data/data-datasetpage2.html
+++ b/tests/testthat/data/data-datasetpage2.html
@@ -399,9 +399,8 @@ title="License text 'Creative Commons Namensnennung'">
   <div class="ressource__">
   <div class="resource_notes">
   <div class="field field-name-field-notes field-type-text clearfix">
-  <strong><p>Webseite von "Angebote der schulbezogenen Jugendarbeit und Jugendsozialarbeit". Hier können Sie bereits Anfragen abschicken und Daten ansehen.<br />
-  lang: de<br />
-  doc: <a href="http://support.berlin.de/wiki/index.php/SimpleSearch_API">http://support.berlin.de/wiki/index.php/SimpleSearch_API</a></p>
+  <strong><p>wat<br />
+  doc: <a href="http://support.berlin.de/wiki/index.php/SimpleSearch_API">http://support.berlin.de/wiki/index.php/SimpleSearch_API</a> wat</p>
   </strong>
   </div>
   </div>
