--- a/tests/testthat/data/test-data-datasetpage.html
+++ b/tests/testthat/data/test-data-datasetpage.html
@@ -429,9 +429,7 @@ doc: <a href="http://support.berlin.de/wiki/index.php/SimpleSearch_API">http://s
         <div class="ressource__">
             <div class="resource_notes">
     <div class="field field-name-field-notes field-type-text clearfix">
-                    <strong><p>REST-API mit JSON-Ausgabe für "Sportvereine und Sportangebote in Marzahn-Hellersdorf". Es existieren weitere GET-Parameter für spezielle Anfragen.<br />
-lang: de<br />
-doc: <a href="http://support.berlin.de/wiki/index.php/SimpleSearch_JSON">http://support.berlin.de/wiki/index.php/SimpleSearch_JSON</a></p>
+                    <strong><p>wat wat <br> wat</p>
 </strong>
             </div>
 </div>
