--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 
-<p>The `R` package `BerlinData` gives you easy access to <a href="http://daten.berlin.de">data.berlin.de</a>. 
+<p>The <code>R</code> package <strong>BerlinData</strong> gives you easy access to <a href="http://daten.berlin.de">data.berlin.de</a>. 
 </p>
 <h2>Installation</h2>
 <p>
