--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Berlin data for R users.</h3>
 
 
 <p>The <code>R</code> package <strong>BerlinData</strong> gives you easy access to <a href="http://daten.berlin.de">data.berlin.de</a>. 
