--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <header>
       <div class="inner">
-        <h1>RBerlinData</h1>
-        <h2>Easy access to data.berlin.de</h2>
+        <h1>RBerlinData R package</h1>
+        <h2>Easy access to data.berlin.de directly from R</h2>
         <a href="https://github.com/dirkschumacher/RBerlinData" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
