--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>RBerlinData</title>
+    <title>RBerlinData R Package</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>RBerlinData R package</h1>
-        <h2>Easy access to data.berlin.de directly from R</h2>
+        <h1>RBerlinData</h1>
+        <h2>Access to data.berlin.de from R</h2>
         <a href="https://github.com/dirkschumacher/RBerlinData" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
