--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ data <- download(resource_list[[1]])
      </section>
 
         <aside id="sidebar">
-          <a href="http://cran.r-project.org/web/packages/rberlindata/index.html">View on CRAN</a>
+          <a href="http://cran.r-project.org/web/packages/rberlindata/index.html"  class="button">View on CRAN</a>
           <a href="https://github.com/dirkschumacher/RBerlinData/zipball/master" class="button">
             <small>Download</small>
             .zip file
